# 11t11

./: CMakeLists.txt  config.conf  xbuildlangmo.sh  xminerlangmo.sh  xminlangmo.py  xrun2langmo.py
